--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,6 @@
-<span>Ngọc đẹp trai vãi</span>
+<router-outlet></router-outlet>
+<app-banner></app-banner>
+<app-partner></app-partner>
+<app-goal></app-goal>
+<app-role></app-role>
+<app-testimonial></app-testimonial>
