--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,16 +4,16 @@
  
  :root {
      /** custom **/
-     --ion-color-hu-black: #020d24;
+     --ion-color-hu-black: #020711;
      --ion-color-hu-red: #146daf;
-     --ion-color-hu-brown: #8e8e93;
+     --ion-color-hu-brown: #f5f5f5;
      --ion-color-hu-orange: #146daf;
      --ion-color-hu-white: #ffffff;
      --ion-color-hu-green: #69b93f;
      --ion-color-primary: #69b93f;
      --ion-color-hu-green_light: #2fe6de;
      --ion-color-hu-default: #69b93f;
-     --ion-color-hu-background: #fbfff0;
+     --ion-color-hu-background: #f9f9f9;    
      --ion-color-hu-header: #69b93f;
      --ion-color-hu-banner: #FFECEC;
  }
