--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -7,9 +7,9 @@
      --ion-color-hu-black: #020d24;
      --ion-color-hu-red: #146daf;
      --ion-color-hu-brown: #8e8e93;
-     --ion-color-hu-orange: #146daf;
+     --ion-color-hu-orange: #ff7b00;
      --ion-color-hu-white: #ffffff;
-     --ion-color-hu-green: #69b93f;
+     --ion-color-hu-green: #93b87f;
      --ion-color-primary: #69b93f;
      --ion-color-hu-green_light: #2fe6de;
      --ion-color-hu-default: #69b93f;
@@ -28,7 +28,7 @@
      --ion-color-hu-brown: #8e8e93;
      --ion-color-hu-orange: #f5a62f;
      --ion-color-hu-white: #ffffff;
-     --ion-color-hu-green: #fdfef9;
+     --ion-color-hu-green: #69b93f;
      --ion-color-hu-green_light: #f5cac4;
  }
  
@@ -39,7 +39,7 @@
      --ion-color-hu-orange: #f18805;
      --ion-color-hu-white: #ffffff;
      --ion-color-hu-green: #a6c7c0;
-     --ion-color-hu-green_light: #f9faf0;
+     --ion-color-hu-green_light: #2fe6de;
  }
  
  .red_theme {
