--- a/src/app/pages/home/role/role.component.html
+++ b/src/app/pages/home/role/role.component.html
@@ -16,7 +16,7 @@
                     <button class="filter-tab">Chăm sóc sức khỏe</button>
                 </div>
                 <div class="role-cards">
-                    <div class="role-card">
+                    <div class="role-card" (click)="goToRoles()">
                         <div class="role-image">
                             <img src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://images.ctfassets.net/00atxywtfxvd/1Z2h61l00YMxiMD8Xu7sHw/669880819cd3c5eac5a5fd08606679d1/data-analyst-role-card_2x.png?auto=format%2Ccompress&dpr=1&w=430" alt="Data Analyst">
                         </div>
