--- a/src/app/component/template/template.component.html
+++ b/src/app/component/template/template.component.html
@@ -49,7 +49,7 @@
                     <div class="ui-info">
                         <h3 class="ui-name">Giao Diện Modern</h3>
                         <p class="ui-description">Hiện đại với thanh điều hướng bên cạnh, tối ưu cho màn hình lớn</p>
-                        <button class="btn-select" data-ui="modern" onclick="window.location.href='https://thanhsang8122003.github.io/templates-lms/template1/'">
+                        <button class="btn-select" data-ui="modern" onclick="window.location.href='templates-lms/template1/'">
                             <span class="btn-text">Chọn Giao Diện</span>
                             <span class="btn-icon">→</span>
                         </button>
